# N64Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RecompPort.sln  RecompPort.vcxproj  RecompPort.vcxproj.filters  disable_warnings.h  flake.nix  pojn  recomp.h  sections.h
.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
LiveRecomp/: live_generator.cpp  live_recompiler_test.cpp
OfflineModRecomp/: main.cpp
RSPRecomp/: RSPRecomp.vcxproj  RSPRecomp.vcxproj.filters
RSPRecomp/src/: rsp_recomp.cpp
RecompModMerger/: main.cpp
RecompModTool/: main.cpp
include/: generator.h  n64recomp.h  operations.h  recomp.h  recomp_port.h
include/recompiler/: context.h  generator.h  live_recompiler.h  lua_generator.h  operations.h
lib/: Rabbitizer.vcxproj  Rabbitizer.vcxproj.filters  fmtlib.vcxproj  fmtlib.vcxproj.filters
src/: analysis.cpp  analysis.h  cgenerator.cpp  config.cpp  config.h  elf.cpp  lua_generator.cpp  luajitgenerator.cpp  main.cpp  mdebug.cpp  mdebug.h  mod_symbols.cpp  operations.cpp  recompilation.cpp  symbol_lists.cpp
test/: RecompTest.sln  RecompTest.vcxproj  RecompTest.vcxproj.filters
test/RecompFuncs/: RecompFuncs.vcxproj  RecompFuncs.vcxproj.filters
test/portultra/: audio.cpp  events.cpp  init.cpp  mesgqueue.cpp  misc_ultra.cpp  multilibultra.hpp  platform_specific.h  port_main.c  scheduler.cpp  task_pthreads.cpp  task_win32.cpp  threads.cpp  timer.cpp  ultra64.h  ultrainit.cpp
test/rsp/: .gitignore
test/src/: ai.cpp  cont.cpp  dp.cpp  eep.cpp  euc-jp.cpp  euc-jp.h  math_routines.cpp  misc_ultra.cpp  overlays.cpp  pak.cpp  pi.cpp  portultra_translation.cpp  print.cpp  recomp.cpp  rsp.h  rsp_vu.h  rsp_vu_impl.h  sp.cpp  vi.cpp
tests/: toml_test.cpp
